[tool.poetry]
name = "system-development-agent"
version = "0.1.0"
description = ""
authors = ["nibura2002 <nibura2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.18"
openai = "^1.61.1"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.17"
streamlit = "^1.42.0"
langchain-openai = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
